--- a/index.html
+++ b/index.html
@@ -597,7 +597,7 @@ Reshaping Punjab's digital life with truly 5G internet Connectivity
     
     
     </div>
-<div class="md:h-80 w-106 h-105 bg-blue-800 text-white flex flex-col justify-around items-center">
+<div class="md:h-80 w-106 md:w-full h-105 bg-blue-800 text-white flex flex-col justify-around items-center">
   <h1 class="md:text-[64px] text-[40px] font-[900] md:leading-[64px] leading-[40px] md:mt-13 mt-10">Need guidance?</h1>
   <p class="md:text-[18px] text-[16px]  font-[500] leading-[24px]">We'd love to help you</p>
   <div>
