--- a/index.html
+++ b/index.html
@@ -736,15 +736,15 @@
         <div class="mr-13">
           <h3 class="text-[16px] font-[900] mb-4">Connect with Us</h3>
           <div class="flex space-x-3 mb-5">
-            <i class="fa-brands fa-x-twitter bg-blue-900 text-white p-2 rounded-full h-10 flex items-center justify-center text-2xl"
+            <i class="fa-brands fa-x-twitter bg-[#0f3cc9] text-white p-2 rounded-full h-10 flex items-center justify-center text-2xl"
               style="width: 40px;"></i>
-            <i class="fa-brands fa-instagram bg-blue-900 text-white p-2 rounded-full h-10 flex items-center justify-center text-2xl"
+            <i class="fa-brands fa-instagram bg-[#0f3cc9] text-white p-2 rounded-full h-10 flex items-center justify-center text-2xl"
               style="width: 40px;"></i>
-            <i class="fa-brands fa-facebook-f bg-blue-900 text-white p-2 rounded-full h-10 flex items-center justify-center text-2xl"
+            <i class="fa-brands fa-facebook-f bg-[#0f3cc9] text-white p-2 rounded-full h-10 flex items-center justify-center text-2xl"
               style="width: 40px;"></i>
-            <i class="fa-brands fa-youtube bg-blue-900 text-white p-2 rounded-full h-10 flex items-center justify-center text-2xl"
+            <i class="fa-brands fa-youtube bg-[#0f3cc9] text-white p-2 rounded-full h-10 flex items-center justify-center text-2xl"
               style="width: 40px;"></i>
-            <i class="fa-brands fa-linkedin-in bg-blue-900 text-white p-2 rounded-full h-10 flex items-center justify-center text-2xl"
+            <i class="fa-brands fa-linkedin-in bg-[#0f3cc9] text-white p-2 rounded-full h-10 flex items-center justify-center text-2xl"
               style="width: 40px;"></i>
           </div>
 
@@ -762,7 +762,7 @@
   </div>
   <div class="md:flex md:block hidden items-center mb-7 justify-center">
     <div class="w-[80%] h-10  flex items-center space-x-5">
-      <div class="h-10 w-11 rounded-full text-white font-[800] text-xl flex justify-center items-center bg-blue-700 ">
+      <div class="h-10 w-11 rounded-full text-white font-[800] text-xl flex justify-center items-center bg-[#0f3cc9] ">
         Jio
       </div>
       <p class="w-[78%] text-gray-600 font-[500] text-[14px]">“Jio” trademark is owned by Reliance Industries Limited and licensed to its affiliates and subsidiaries. All
@@ -776,6 +776,59 @@
       </ul>
     </div>
   </div>
+
+  <div class="md:hidden  w-105 my-8 ">
+<div class=" h-65 flex text-[16px] font-bold flex-col px-8 justify-around">
+  <div>Over offerings <i class="fa-solid fa-chevron-down pl-50" style="color: #0f3cc9;"></i></div>
+  <hr>
+<div>Support <i class="fa-solid fa-chevron-down pl-62" style="color: #0f3cc9;"></i></div>
+<hr>
+<div>Our company <i class="fa-solid fa-chevron-down pl-52" style="color: #0f3cc9;"></i></div>
+<hr>
+<div>Useful Links <i class="fa-solid fa-chevron-down pl-54" style="color: #0f3cc9;"></i></div>
+<hr>
+</div>
+<div>
+  <div class="text-[18px] font-[900] mx-8 my-4">Connect with Us</div>
+   <div class="flex space-x-3 mb-8 ml-8">
+            <i class="fa-brands fa-x-twitter bg-[#0f3cc9] text-white p-1 rounded-full h-8 flex items-center justify-center text-xl"
+              style="width: 30px;"></i>
+            <i class="fa-brands fa-instagram bg-[#0f3cc9] text-white p-1 rounded-full h-8  flex items-center justify-center text-xl"
+              style="width: 30px;"></i>
+            <i class="fa-brands fa-facebook-f bg-[#0f3cc9] text-white p-1 rounded-full h-8  flex items-center justify-center text-xl"
+              style="width: 30px;"></i>
+            <i class="fa-brands fa-youtube bg-[#0f3cc9] text-white p-1 rounded-full h-8  flex items-center justify-center text-xl"
+              style="width: 30px;"></i>
+            <i class="fa-brands fa-linkedin-in bg-[#0f3cc9] text-white p-1 rounded-full h-8  flex items-center justify-center text-xl"
+              style="width: 30px;"></i>
+          </div>
+          <div>
+            <div class="text-[18px] font-[900] mx-8 my-3">
+            Download MyJio
+          </div>
+          <div class="flex space-x-3 mb-8 ml-8 mb-8">
+            <img src="./Images/G-Play.svg" alt="">
+            <img src="./Images/AppStore.svg" alt="">
+          </div>
+          </div>
+          
+          <div class="h-10 w-10 mx-8 rounded-full text-white font-[800] text-xl flex justify-center items-center bg-[#0f3cc9] ">Jio</div>
+</div>
+<div class="px-8 text-gray-600 font-[500] text-[13px] py-4">
+  “Jio” trademark is owned by Reliance Industries Limited and licensed to its affiliates and subsidiaries. All
+        rights to this website, including copyright in content represented thereat, vest in Reliance Industries Limited
+        and/or its respective affiliates and subsidiaries. All rights reserved.
+</div>
+<div>
+  <ul class="flex space-x-6 mt-2 text-[14px] items-center text-gray-600 font-[500] px-8">
+    <li>Press release</li>
+    <li>Regulatory</li>
+    <li>Policies</li>
+    <li>Terms & conditions</li>
+  </ul>
+</div>
+  </div>
+
   <!-- Swiper JS -->
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   <script>
