--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   </style>
 </head>
 
-<body class="font-sans w-105 md:w-full">
+<body class="font-sans w-105 scroll-smooth md:w-full">
 
   <div class="h-[89px] w-full text-white flex items-center justify-between border-b">
     
